# llm-wrapper

./: Cargo.toml  flake.nix
src/: error.rs  image.rs  lib.rs  main.rs  message.rs  model.rs  request.rs  response.rs  structure.rs  urls.rs
src/json_schema/: error.rs  mod.rs
