[package]
name = "llm-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = [
    "blocking",
    "json",
    "rustls-tls",
    "h2",
    "http2",
    "stream",
], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
base64 = "0.22.1"
image = "0.25.6"
thiserror = "2.0.12"
schemars = { version = "0.8.22", features = ["derive_json_schema"] }
dotenvy = "0.15.7"
